--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,36 @@
-# Your requirements go here
+astroid==3.0.2
+asttokens==2.4.1
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+colorama==0.4.6
+dill==0.3.8
+docutils==0.20.1
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+gspread==6.0.0
+idna==3.6
+isort==5.13.2
+jedi==0.19.1
+mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
+oauthlib==3.2.2
+parso==0.8.3
+platformdirs==4.2.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pylint==3.0.3
+pyserial==3.5
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+Send2Trash==1.8.2
+setuptools==69.0.3
+six==1.16.0
+StrEnum==0.4.15
+thonny==4.1.4
+tomlkit==0.12.3
+typing_extensions==4.9.0
+urllib3==2.2.0
+wheel==0.42.0
